[package]
name = "recursive_sync"
version = "0.0.1"
authors = ["Connorcpu <connorcpu@live.com>"]
build = "build.rs"
description = "Recursive-permissive Mutex implementation for Rust"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/Connorcpu/recursive_sync"

[build-dependencies]
gcc = "*"
